
2004-10-24  Mario Strasser  <mast@gmx.net>
	
	* Makefile: new makefile for Linux kernels > 2.5.0 build system
	* tpm_testing.c: replacement of some floating-point calculations 
	                 with fix-point arithmetic 
	* all: minor changes int the directory and header file structure
	       to make the package easier portable and maintainable 


2004-07-01  Mario Strasser  <mast@gmx.net>  

	* Initial release based on my semester thesis
