@@ -278,8 +278,11 @@ TPM_RESULT TSC_PhysicalPresence(TPM_PHYSICAL_PRESENCE physicalPresence)
 
 TPM_RESULT TSC_ResetEstablishmentBit()
 {
-  info("TSC_ResetEstablishmentBit() not implemented yet");
-  /* TODO: implement TSC_ResetEstablishmentBit() */
-  return TPM_FAIL;
+  info("TSC_ResetEstablishmentBit()");
+  /* locality must be three or four */
+  if (tpmData.stany.flags.localityModifier != 3
+      && tpmData.stany.flags.localityModifier != 4) return TPM_BAD_LOCALITY;  
+  /* as we do not have such a bit we do nothing and just return true */
+  return TPM_SUCCESS;
 }
 
