@@ -2,5 +2,5 @@
 #define _TPM_VERSION_H_
 #define VERSION_MAJOR 0
 #define VERSION_MINOR 2
-#define VERSION_BUILD 1098718602
+#define VERSION_BUILD 1114538880
 #endif /* _TPM_VERSION_H_ */
